# Calibration-application

./: CMakeLists.txt  Readme.md
src/: FirstOrderInst.cpp  FirstOrderInst.h  GUI_to_application_processing.cpp  GUI_to_application_processing.h  Instrument.cpp  Instrument.h  entry_t.cpp  entry_t.h  main.cpp  senoidal_entry.cpp  senoidal_entry.h  thread_functions.cpp  thread_functions.h
